allure-macros/tests/ui/fail/allure_test_on_struct.rs
use allure_macros::allure_test;

// allure_test can only be applied to functions, not structs
#[allure_test]
struct MyTest {
    value: i32,
}

fn main() {}
