allure-macros/tests/ui/fail/allure_test_on_struct.stderr
error: expected `fn`
 --> tests/ui/fail/allure_test_on_struct.rs:5:1
  |
5 | struct MyTest {
  | ^^^^^^
